# src/api/post.controller.ts
@@ -1,10 +1,10 @@
 import { Router } from "express";
 import { PostService } from "@src/service";
 import wrapAsyncFunc from "@src/utils/catchAsync";
-import { identifierSchema } from "@src/utils/paramsSchema";
 import { authRequired } from "@src/middlewares/authRequired";
 import { commentSchema, postSchema } from "@src/utils/bodySchema";
 import { STATUS_200_OK, STATUS_201_CREATED } from "@src/utils/statusCode";
+import { identifierSchema, postIdentifierSchema } from "@src/utils/paramsSchema";
 import { bodyValidator, paramsValidator } from "@src/middlewares/requestValidator";
 
 const postController = Router();
@@ -168,6 +168,38 @@ postController.delete(
         const { id } = req.params;
         const deletedPost = await PostService.deletePost(id);
         res.status(STATUS_200_OK).json(deletedPost);
+    }),
+);
+
+postController.delete(
+    "/posts/:postId/comments/:commentId",
+    authRequired,
+    paramsValidator(postIdentifierSchema),
+    wrapAsyncFunc(async (req, res, _next) => {
+        /*  #swagger.tags = ["comment"]
+            #swagger.description = "댓글 삭제 **로그인 필수**"
+            #swagger.security = [{
+               "bearerAuth": []
+            }]
+            #swagger.parameters['postId'] = {
+                in: 'path',
+                description: '삭제하고자 하는 댓글이 달려있는 게시글 ID',
+                required: true,
+                schema: { $ref: "#/definitions/PostId" }
+            }
+            #swagger.parameters['commentId'] = {
+                in: 'path',
+                description: '삭제하고자 하는 댓글의 ID',
+                required: true,
+                schema: { $ref: "#/definitions/CommentId" }
+            }
+            #swagger.responses[200] = {
+            schema: { "$ref": "#/definitions/DeleteResponse" },
+            description: "삭제 메시지" } */
+
+        const { postId, commentId } = req.params;
+        const deletedComment = await PostService.deleteComment(postId, commentId);
+        res.status(STATUS_200_OK).json(deletedComment);
     }),
 );
 
