# swagger-output.json
@@ -413,6 +413,49 @@
         ]
       }
     },
+    "/posts/{postId}/comments/{commentId}": {
+      "delete": {
+        "tags": [
+          "comment"
+        ],
+        "description": "댓글 삭제 **로그인 필수**",
+        "parameters": [
+          {
+            "name": "postId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "삭제하고자 하는 댓글이 달려있는 게시글 ID",
+            "schema": {
+              "$ref": "#/definitions/PostId"
+            }
+          },
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "삭제하고자 하는 댓글의 ID",
+            "schema": {
+              "$ref": "#/definitions/CommentId"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/DeleteResponse"
+            },
+            "description": "삭제 메시지"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/quizzes": {
       "get": {
         "tags": [
